--- a/iOSTrial&Error/iOSTrial&Error/Base.lproj/Main.storyboard
+++ b/iOSTrial&Error/iOSTrial&Error/Base.lproj/Main.storyboard
@@ -7,8 +7,8 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Luna.ttf">
-            <string>Luna</string>
+        <array key="Sunrise International Demo.otf">
+            <string>SunriseInternationalDemo</string>
         </array>
     </customFonts>
     <scenes>
@@ -31,7 +31,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="newschef" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofp-AG-JTg">
-                                <fontDescription key="fontDescription" name="Luna" family="Luna" pointSize="33"/>
+                                <fontDescription key="fontDescription" name="SunriseInternationalDemo" family="Sunrise International Demo" pointSize="74"/>
                                 <color key="textColor" red="0.97419011780104714" green="0.31834369689360276" blue="0.30673796224722227" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -41,11 +41,6 @@
                                 <state key="normal" title="Sign In with Phone Number">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xEm-gp-iS4">
-                                <frame key="frameInset" minX="258" minY="623" width="73" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <state key="normal" title="Privacy Policy"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5xB-yf-1df">
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
@@ -58,33 +53,35 @@
                                     <segue destination="0eQ-cw-l6s" kind="presentation" identifier="showLookAround" id="YuU-Un-g9W"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="by signing up you agree to our " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATo-u1-vAX">
-                                <frame key="frameInset" minX="87" minY="623" width="162.5" height="23.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qhX-mM-S4A">
+                                <frame key="frameInset" minX="34" minY="617" width="307" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <state key="normal" title="by signing up you agree to our PRIVACY POLICY"/>
+                                <connections>
+                                    <action selector="onPrivacyPolicyButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CHp-tp-uCq"/>
+                                    <segue destination="2QJ-yu-f1v" kind="presentation" identifier="showPrivacyPolicy" id="405-Cd-Dos"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xEm-gp-iS4" secondAttribute="bottom" constant="16" id="28M-qG-GKj"/>
                             <constraint firstItem="ofp-AG-JTg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="140" id="5r7-ed-NbQ"/>
                             <constraint firstItem="dNQ-Za-OPc" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="80w-1u-uzn"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ATo-u1-vAX" secondAttribute="bottom" constant="22.5" id="9o5-wx-Gbj"/>
                             <constraint firstItem="5xB-yf-1df" firstAttribute="centerX" secondItem="dNQ-Za-OPc" secondAttribute="centerX" id="B3w-69-ip1"/>
-                            <constraint firstItem="xEm-gp-iS4" firstAttribute="leading" secondItem="ATo-u1-vAX" secondAttribute="trailing" constant="0.5" id="Dou-Lh-Lhb"/>
+                            <constraint firstItem="5xB-yf-1df" firstAttribute="top" secondItem="3kd-5f-s2S" secondAttribute="bottom" constant="21" id="E2B-hR-hyy"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3kd-5f-s2S" secondAttribute="bottom" constant="130" id="LP5-jt-ett"/>
-                            <constraint firstItem="ATo-u1-vAX" firstAttribute="top" secondItem="5xB-yf-1df" secondAttribute="bottom" constant="28" id="LZN-mD-8sN"/>
                             <constraint firstItem="ofp-AG-JTg" firstAttribute="centerX" secondItem="dNQ-Za-OPc" secondAttribute="centerX" id="R48-6N-Tfg"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qhX-mM-S4A" secondAttribute="bottom" constant="20" id="TLV-PS-pk4"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dNQ-Za-OPc" secondAttribute="bottom" id="VRl-dT-9E4"/>
-                            <constraint firstItem="ATo-u1-vAX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="68" id="bQ0-to-idW"/>
                             <constraint firstItem="dNQ-Za-OPc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eSK-Ef-Epr"/>
+                            <constraint firstItem="qhX-mM-S4A" firstAttribute="centerX" secondItem="dNQ-Za-OPc" secondAttribute="centerX" id="l4T-Wg-EwL"/>
                             <constraint firstAttribute="trailing" secondItem="dNQ-Za-OPc" secondAttribute="trailing" id="vZA-uK-NXz"/>
                             <constraint firstItem="3kd-5f-s2S" firstAttribute="centerX" secondItem="dNQ-Za-OPc" secondAttribute="centerX" id="zIv-YJ-diy"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="lookAroundButton" destination="5xB-yf-1df" id="N7U-Kg-Jvh"/>
+                        <outlet property="privacyPolicyButton" destination="qhX-mM-S4A" id="iLa-xK-5oK"/>
                         <outlet property="signInButton" destination="3kd-5f-s2S" id="N4k-s0-Oob"/>
                     </connections>
                 </viewController>
@@ -99,6 +96,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HQa-xU-Fcq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="705.5" y="178.5"/>
+        </scene>
+        <!--Privacy Policy View Controller-->
+        <scene sceneID="8aU-GE-CI4">
+            <objects>
+                <viewController id="2QJ-yu-f1v" customClass="PrivacyPolicyViewController" customModule="iOSTrial_Error" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YZ2-w3-F5U"/>
+                        <viewControllerLayoutGuide type="bottom" id="foJ-4D-i1B"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OQV-rK-UHc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VZO-Zh-I05">
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <state key="normal" title="Close"/>
+                                <connections>
+                                    <segue destination="BcO-X1-KHI" kind="unwind" unwindAction="unWindToLandingPageWithSegue:" id="Qbm-fb-zev"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Privacy Policies will be updated soon. " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7OS-CR-s7o">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="VZO-Zh-I05" secondAttribute="trailing" constant="7" id="GEl-pP-5Mm"/>
+                            <constraint firstItem="7OS-CR-s7o" firstAttribute="centerY" secondItem="OQV-rK-UHc" secondAttribute="centerY" id="Nwb-lN-pLm"/>
+                            <constraint firstItem="VZO-Zh-I05" firstAttribute="top" secondItem="YZ2-w3-F5U" secondAttribute="bottom" id="z0W-kf-JdL"/>
+                            <constraint firstItem="7OS-CR-s7o" firstAttribute="centerX" secondItem="OQV-rK-UHc" secondAttribute="centerX" id="zZh-cW-avm"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="BcO-X1-KHI" kind="unwind" unwindAction="onCloseButtonTappedWithSegue:" id="vfF-ll-Xkc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tY7-Ff-QSg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="BcO-X1-KHI" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-854" y="949"/>
         </scene>
         <!--Look Up Child View Controller-->
         <scene sceneID="0j5-sA-oQi">
